--- a/public/assets/css/templatemo-villa-agency.css
+++ b/public/assets/css/templatemo-villa-agency.css
@@ -20,16 +20,16 @@ Table of contents
 09. footer
 
 --------------------------------------------- */
-/* 
+/*
 ---------------------------------------------
 font & reset css
---------------------------------------------- 
+---------------------------------------------
 */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900");
-/* 
+/*
 ---------------------------------------------
 reset
---------------------------------------------- 
+---------------------------------------------
 */
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, div
 pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q,
@@ -109,10 +109,10 @@ img {
   overflow: hidden;
 }
 
-/* 
+/*
 ---------------------------------------------
 Global Styles
---------------------------------------------- 
+---------------------------------------------
 */
 html,
 body {
@@ -208,10 +208,10 @@ body {
   color: #fff;
 }
 
-/* 
+/*
 ---------------------------------------------
 Pre-loader Style
---------------------------------------------- 
+---------------------------------------------
 */
 
 .js-preloader {
@@ -310,10 +310,10 @@ Pre-loader Style
 
 
 
-/* 
+/*
 ---------------------------------------------
 Header Style
---------------------------------------------- 
+---------------------------------------------
 */
 
 .sub-header {
@@ -625,6 +625,11 @@ Header Style
 
 }
 
+@media screen and (max-width: 480px) {
+    .logo a {
+        font-size: 18px; /* Adjust font size for smaller screens */
+    }
+
 @media (max-width: 767px) {
   .background-header .main-nav {
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
@@ -727,13 +732,16 @@ Header Style
     padding-left: 0px !important;
     padding-right: 0px !important;
   }
-  
+
+
 }
 
-/* 
+}
+
+/*
 ---------------------------------------------
 Banner Style
---------------------------------------------- 
+---------------------------------------------
 */
 
 .main-banner .item {
@@ -840,10 +848,10 @@ Banner Style
 
 
 
-/* 
+/*
 ---------------------------------------------
 Featured Style
---------------------------------------------- 
+---------------------------------------------
 */
 
 .featured .left-image {
@@ -951,10 +959,10 @@ Featured Style
   font-weight: 400;
 }
 
-/* 
+/*
 ---------------------------------------------
 Video Style
---------------------------------------------- 
+---------------------------------------------
 */
 
 .video {
@@ -1001,10 +1009,10 @@ Video Style
   font-size: 18px;
 }
 
-/* 
+/*
 ---------------------------------------------
 Fun Facts Style
---------------------------------------------- 
+---------------------------------------------
 */
 
 .fun-facts {
@@ -1053,10 +1061,10 @@ Fun Facts Style
 }
 
 
-/* 
+/*
 ---------------------------------------------
 Best Deal Style
---------------------------------------------- 
+---------------------------------------------
 */
 
 .best-deal {
@@ -1146,10 +1154,10 @@ Best Deal Style
 }
 
 
-/* 
+/*
 ---------------------------------------------
 Properties Style
---------------------------------------------- 
+---------------------------------------------
 */
 
 .properties .item {
@@ -1215,10 +1223,10 @@ Properties Style
 }
 
 
-/* 
+/*
 ---------------------------------------------
 Contact Style
---------------------------------------------- 
+---------------------------------------------
 */
 
 .contact {
@@ -1332,10 +1340,10 @@ Contact Style
 }
 
 
-/* 
+/*
 ---------------------------------------------
 Footer Style
---------------------------------------------- 
+---------------------------------------------
 */
 
 footer.footer-no-gap {
@@ -1367,10 +1375,10 @@ footer p a:hover {
 }
 
 
-/* 
+/*
 ---------------------------------------------
 Page Header Style
---------------------------------------------- 
+---------------------------------------------
 */
 
 .page-heading {
@@ -1405,10 +1413,10 @@ Page Header Style
 }
 
 
-/* 
+/*
 ---------------------------------------------
 Properties Style
---------------------------------------------- 
+---------------------------------------------
 */
 
 .properties ul.properties-filter {
@@ -1481,10 +1489,10 @@ Properties Style
 }
 
 
-/* 
+/*
 ---------------------------------------------
 Single Page Style
---------------------------------------------- 
+---------------------------------------------
 */
 
 .single-property .main-image img {
@@ -1587,10 +1595,10 @@ Single Page Style
 }
 
 
-/* 
+/*
 ---------------------------------------------
 Contact Page Style
---------------------------------------------- 
+---------------------------------------------
 */
 
 .contact-page #map {
@@ -1691,10 +1699,10 @@ Contact Page Style
 }
 
 
-/* 
+/*
 ---------------------------------------------
 Responsive Style
---------------------------------------------- 
+---------------------------------------------
 */
 
 body {
@@ -1703,7 +1711,7 @@ body {
 
 @media (max-width: 767px) {
   .header-area .main-nav .logo h1 {
-    line-height: 80px !important;
+    line-height: 50px !important;
   }
   .best-deal .tabs-content .nav-link {
     font-size: 14px;
@@ -1731,7 +1739,7 @@ body {
     display: none;
   }
   .header-area .main-nav .logo h1 {
-    line-height: 100px;
+    line-height: 90px;
   }
   .background-header .main-nav .logo h1 {
     line-height: 80px;
