--- a/public/assets/css/templatemo-villa-agency.css
+++ b/public/assets/css/templatemo-villa-agency.css
@@ -975,7 +975,7 @@ Video Style
 */
 
 .video {
-  background-image: url(../images/bg-video.jpg);
+  background-image: url(../images/bg1.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
